aufgabe a fast erledigt. sortieren und gängige worte filtern ist noch offen. problem: shifter muss aktiver filter sein, sonst gibt es zwei mögliche Konstruktoren.